recursion.cons.length.Length.scala.error
Erreur de compilation :
Length:2: error: type mismatch;
 found   : Unit
 required: Int
def length(l:List[Int]): Int = {
                               ^